# pallet-sponsoring

./: .envrc  Cargo.dpp  Cargo.toml  README.md  shell.nix
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/custom-transaction-payment/: Cargo.toml
pallets/custom-transaction-payment/src/: lib.rs
pallets/sponsorship-primitives/: Cargo.toml
pallets/sponsorship-primitives/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template-charge-transaction/: Cargo.toml
pallets/template-charge-transaction/src/: lib.rs
pallets/template-transaction-payment/: Cargo.toml
pallets/template-transaction-payment/src/: lib.rs
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  sponsorship.rs  tests.rs
primitives/sponsorship/: Cargo.toml
primitives/sponsorship/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
