[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'

[build-dependencies]
substrate-build-script-utils = "9.0.0"

[dependencies]
clap = "4.4.6"
flexi_logger = "0.27.2"
frame-benchmarking = "25.0.0"
frame-benchmarking-cli = "29.0.0"
futures = "0.3.28"
jsonrpsee = { version = "0.16.3", features = ["server"] }
log = "0.4.20"
node-template-runtime = { path = "../runtime" }
pallet-transaction-payment-rpc = "27.0.0"
parking_lot = '0.12.1'
sc-basic-authorship = "0.31.0"
sc-cli = "0.33.0"
sc-client-api = "25.0.0"
sc-consensus = "0.30.0"
sc-consensus-aura = "0.31.0"
sc-consensus-grandpa = "0.16.0"
sc-executor = "0.29.0"
sc-keystore = "22.0.0"
sc-network = "0.31.0"
sc-rpc = "26.0.0"
sc-rpc-api = "0.30.0"
sc-service = "0.32.0"
sc-telemetry = "12.0.0"
sc-transaction-pool = "25.0.0"
sc-transaction-pool-api = "25.0.0"
sp-api = "23.0.0"
sp-block-builder = "23.0.0"
sp-blockchain = "25.0.0"
sp-consensus = "0.29.0"
sp-consensus-aura = "0.29.0"
sp-consensus-grandpa = "10.0.0"
sp-core = "25.0.0"
sp-runtime = "28.0.0"
sp-timestamp = "23.0.0"
substrate-frame-rpc-system = "25.0.0"

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
