[package]
authors = ['Unique Network <support@uniquenetwork.io>']
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'node-template-runtime'
publish = false
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.pallet-template]
default-features = false
path = '../pallets/template'

[build-dependencies.substrate-wasm-builder]
version = '4.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.2'

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
optional = true
branch = "polkadot-v0.9.25"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.frame-system-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
optional = true
branch = "polkadot-v0.9.25"


[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-grandpa]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-sudo]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.25"


[dependencies]
# pallet-custom-transaction-payment = { path = '../pallets/custom-transaction-payment', default-features = false, version = '3.0.0' }
up-sponsorship = { path = '../primitives/sponsorship', default-features = false, version = "0.1.0" }
pallet-template-transaction-payment = { path = '../pallets/template-transaction-payment', default-features = false, version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-template-transaction-payment/std',
    'up-sponsorship/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
