[package]
authors = ['Unique Network <support@uniquenetwork.io>']
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'node-template-runtime'
publish = false
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[package.metadata.deppatcher.originals.dependencies]
frame-benchmarking = { version = "25.0.0" }
frame-executive = { version = "25.0.0" }
frame-support = { version = "25.0.0" }
frame-system = { version = "25.0.0" }
frame-system-benchmarking = { version = "25.0.0" }
frame-system-rpc-runtime-api = { version = "23.0.0" }
pallet-aura = { version = "24.0.0" }
pallet-balances = { version = "25.0.0" }
pallet-grandpa = { version = "25.0.0" }
pallet-sudo = { version = "25.0.0" }
pallet-timestamp = { version = "24.0.0" }
pallet-transaction-payment = { version = "25.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "25.0.0" }
sp-api = { version = "23.0.0" }
sp-block-builder = { version = "23.0.0" }
sp-consensus-aura = { version = "0.29.0" }
sp-core = { version = "25.0.0" }
sp-inherents = { version = "23.0.0" }
sp-offchain = { version = "23.0.0" }
sp-runtime = { version = "28.0.0" }
sp-session = { version = "24.0.0" }
sp-std = { version = "12.0.0" }
sp-transaction-pool = { version = "23.0.0" }
sp-version = { version = "26.0.0" }

[package.metadata.deppatcher.originals.build-dependencies]
substrate-wasm-builder = { version = "14.0.0" }

[build-dependencies]
substrate-wasm-builder = "20.0.0"


[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
frame-benchmarking = { default-features = false, optional = true, version = "31.0.0" }
frame-executive = { default-features = false, version = "31.0.0" }
frame-support = { default-features = false, version = "31.0.0" }
frame-system = { default-features = false, version = "31.0.0" }
frame-system-benchmarking = { default-features = false, optional = true, version = "31.0.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "29.0.0" }
hex-literal = { optional = true, version = "0.4.1" }
pallet-aura = { default-features = false, version = "30.0.0" }
pallet-balances = { default-features = false, version = "31.0.0" }
pallet-grandpa = { default-features = false, version = "31.0.0" }
pallet-sudo = { default-features = false, version = "31.0.0" }
pallet-template = { default-features = false, path = "../pallets/template" }
pallet-timestamp = { default-features = false, version = "30.0.0" }
pallet-transaction-payment = { default-features = false, version = "31.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "31.0.0" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, version = "29.0.0" }
sp-block-builder = { default-features = false, version = "29.0.0" }
sp-consensus-aura = { default-features = false, version = "0.35.0" }
sp-core = { default-features = false, version = "31.0.0" }
sp-inherents = { default-features = false, version = "29.0.0" }
sp-offchain = { default-features = false, version = "29.0.0" }
sp-runtime = { default-features = false, version = "34.0.0" }
sp-session = { default-features = false, version = "30.0.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-transaction-pool = { default-features = false, version = "29.0.0" }
sp-version = { default-features = false, version = "32.0.0" }
# pallet-custom-transaction-payment = { path = '../pallets/custom-transaction-payment', default-features = false, version = '3.0.0' }
pallet-template-transaction-payment = { path = '../pallets/template-transaction-payment', default-features = false, version = '3.0.0' }
up-sponsorship = { path = '../primitives/sponsorship', default-features = false, version = "0.1.0" }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-template/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
std = [
	'codec/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-sudo/std',
	'pallet-template-transaction-payment/std',
	'pallet-template/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'up-sponsorship/std',
]
