[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Unique pallet nft specific transaction payment'
edition = '2021'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-template-transaction-payment'
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
frame-benchmarking = { default-features = false, optional = true, version = "25.0.0" }
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }
pallet-balances = { default-features = false, version = "25.0.0" }
pallet-transaction-payment = { default-features = false, version = "25.0.0" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false }
sp-core = { default-features = false, version = "25.0.0" }
sp-io = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

up-sponsorship = { default-features = false, path = "../../primitives/sponsorship", version = "0.1.0" }

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking"]
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-transaction-payment/std',
	'serde/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ["frame-support/try-runtime"]
