[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Sponsorning demo node'
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'pallet-template'
publish = false
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.27"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.27"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.27"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.2'

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
optional = true
branch = "polkadot-v0.9.27"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.27"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.27"

[dependencies.up-sponsorship]
default-features = false
path = '../../primitives/sponsorship'
version = '0.1.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'up-sponsorship/std',
]
try-runtime = ['frame-support/try-runtime']
