[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Sponsorning demo node'
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'pallet-template'
publish = false
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.2.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.2.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.2.0" }
scale-info = { default-features = false, features = ['derive'], version = "2.9.0" }
up-sponsorship = { default-features = false, path = '../../primitives/sponsorship', version = '0.1.0' }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.2.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.2.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.2.0" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = ['codec/std', 'frame-benchmarking/std', 'frame-support/std', 'frame-system/std', 'up-sponsorship/std']
try-runtime = ['frame-support/try-runtime']
