[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Sponsorning demo node'
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'pallet-template'
publish = false
repository = 'https://github.com/UniqueNetwork/pallet-sponsoring'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[package.metadata.deppatcher.originals.dependencies]
frame-benchmarking = { version = "25.0.0" }
frame-support = { version = "25.0.0" }
frame-system = { version = "25.0.0" }

[package.metadata.deppatcher.originals.dev-dependencies]
sp-core = { version = "25.0.0" }
sp-io = { version = "27.0.0" }
sp-runtime = { version = "28.0.0" }

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
frame-benchmarking = { default-features = false, optional = true, version = "31.0.0" }
frame-support = { default-features = false, version = "31.0.0" }
frame-system = { default-features = false, version = "31.0.0" }
scale-info = { default-features = false, features = ['derive'], version = "2.9.0" }
up-sponsorship = { default-features = false, path = '../../primitives/sponsorship', version = '0.1.0' }

[dev-dependencies]
sp-core = { default-features = false, version = "31.0.0" }
sp-io = { default-features = false, version = "33.0.0" }
sp-runtime = { default-features = false, version = "34.0.0" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = ['codec/std', 'frame-benchmarking/std', 'frame-support/std', 'frame-system/std', 'up-sponsorship/std']
try-runtime = ['frame-support/try-runtime']
